# 1c-mcp-toolkit

./: .gitignore  ANONYMIZATION.md  Dockerfile  README.md  README_FULL.md  docker-compose.yml  requirements.txt
.github/workflows/: build-macos.yml
1c/MCPToolkit/: MCPToolkit.xml
1c/MCPToolkit/MCPToolkit/Ext/: ObjectModule.bsl
native_components/: BUILDING_MACOS.md
native_components/MCPHttpTransport/: CMakeLists.txt  README.md
native_components/MCPHttpTransport/src/: MCPHttpTransport.def  component.cpp  component.h  dllmain.cpp  http_transport.cpp  http_transport.h  pending_requests.cpp  pending_requests.h  sse_stream.cpp  sse_stream.h
native_components/QueryLineageAnalyzer/: build_macos.sh
native_components/ToonConverter/: CMakeLists.txt  README.md
native_components/ToonConverter/src/: ToonConverter.def  component.cpp  component.h  dllmain.cpp  toon_encoder.cpp  toon_encoder.h
onec_mcp_toolkit_proxy/: __init__.py  __main__.py  channel_middleware.py  channel_registry.py  channel_sse_transport.py  command_queue.py  config.py  mcp_handler.py  query_encoding_middleware.py  response_formatter.py  rest_api.py  server.py  tools.py
onec_mcp_toolkit_proxy/anonymizer/: anonymization_defaults.py  anonymizer.py  dictionary_matcher.py  registry.py  token_mapper.py  value_detector.py
skills/calling-1c-rest-api-via-curl/: SKILL.md
skills/calling-1c-rest-api-via-curl/references/: tools-full-reference.md
skills/composing-1c-queries/: SKILL.md
skills/composing-1c-queries/references/: optimization-and-pitfalls.md
(+12 files in other folders)
